--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Cinema project</title>
+        <title>Auction house</title>
         <meta name="viewport" content="width=device-width, initail-scale=1.0">
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
