--- a/core/templates/advertadd.html
+++ b/core/templates/advertadd.html
@@ -2,20 +2,16 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block content %}
-<main>
-    <div class="container">
-        <div class="mt-5">
-            <form method="POST" enctype="multipart/form-data">
-                {%csrf_token%}
-                <fieldset class='form-group' style="color: red;">
-                    <legend class='border-bottom mb-4 text-danger'>Add new advert</legend>
-                    {{form|crispy}}
-                </fieldset>
-                <div class='form-group'>
-                    <button class='btn btn-primary' type="submit">Add</button>
-                </div>
-            </form>
+<div class="text-center mt-5 bg-dark">
+    <form method="POST" enctype="multipart/form-data">
+        {%csrf_token%}
+        <fieldset class='form-group' style="color: red;">
+            <legend class='border-bottom mb-4 text-danger'>Add new advert</legend>
+            {{form|crispy}}
+        </fieldset>
+        <div class='form-group'>
+            <button class='btn btn-primary mb-2' type="submit">Add</button>
         </div>
-    </div>
-  </main>    
+    </form>
+</div>
 {% endblock content %}
